@@ -1,3 +1,8 @@
+2015-08-10  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 36079: Src/signals.c: do not allow update_job() and its helpers
+	to run the signal queue while we are processing a job exit.
+
 2015-08-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* 36083: Src/builtin.c, Test/B02typeset.ztst: set array value
